--- a/제로초 인강/2-1.html
+++ b/제로초 인강/2-1.html
@@ -6,6 +6,7 @@
         <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico?1">
     </head>
     <body>
+        <!-- 태그의 역할, 의미에 맞는 시맨틱 태그 사용 권장 -->
         <header> 
             <h1>
                 <a href="https://www.naver.com">네이버</a>
@@ -50,11 +51,11 @@
             <h3>뉴스</h3>
             <h3>법률</h3>
             <h3>쇼핑</h3>
-    </main>
-    <footer>
-        <div>공지사항</div>
-        <div>Creators</div>
-        <div>회사소개</div>
-    </footer>
+        </main>
+        <footer>
+            <div>공지사항</div>
+            <div>Creators</div>
+            <div>회사소개</div>
+        </footer>
     </body>
 </html>
