--- a/제로초 인강/5-1.html
+++ b/제로초 인강/5-1.html
@@ -4,11 +4,17 @@
         <meta charset="utf-8" />
         <title>네이버</title>
         <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico?1">
-        <link rel="stylesheet" href="./4-5.css"> <!--css파일 link-->
+        <link rel="stylesheet" href="./5-1.css"> <!--css파일 link-->
     </head>
     <body>
-        <header>
+        <header style="background-color: yellow">
             <!-- <div id="fixed">고정</div> -->
+
+            <!--float 특징: 겹치지 않음.-->
+            <div>
+                <div style="float: right; background-color:green; height: 200px">둥둥둥둥</div>
+                <div>가나다라마바사아자차카타파하</div>
+            </div>
             <div class="center-align"><!--구역 가운데 정렬용 div-->
             <!-- <div>style="margin:0 auto; width: 1080px;"</div> -->
             <!--속성명 : 속성값; 속성명2 : 속성값2-->
