--- a/제로초 인강/5-2.html
+++ b/제로초 인강/5-2.html
@@ -4,25 +4,17 @@
         <meta charset="utf-8" />
         <title>네이버</title>
         <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico?1">
-        <link rel="stylesheet" href="./5-1.css"> <!--css파일 link-->
+        <link rel="stylesheet" href="./5-2.css"> <!--css파일 link-->
     </head>
     <body>
-        <header style="background-color: yellow">
-            <!-- <div id="fixed">고정</div> -->
-
-            <!--float 특징: 겹치지 않음.-->
-            <div>
-                <div style="float: right; background-color:green; height: 200px">둥둥둥둥</div>
-                <div>가나다라마바사아자차카타파하</div>
-            </div>
-
+        <header>
             <div class="center-align"><!--구역 가운데 정렬용 div-->
             <!-- <div>style="margin:0 auto; width: 1080px;"</div> -->
             <!--속성명 : 속성값; 속성명2 : 속성값2-->
             <!--인라인 스타일 (권장하지 않음. css파일에서 작성 권장)-->
-                <div>
-                    <span>네이버를 시작페이지로</span>
-                    <span>쥬니어네이버</span>
+                <div id="header-top">
+                    <span>네이버를 시작페이지로 > | </span>
+                    <span>쥬니어네이버 | </span>
                     <span>해피빈</span>
                 </div>
                 <div id="header-search">
