--- a/제로초 인강/5-3.html
+++ b/제로초 인강/5-3.html
@@ -38,6 +38,11 @@
         </header>
         <nav>
             <div class="center-align relative">
+                <span id="search-ranking">
+                    <h2 class="blind">실시간 검색어</h2>
+                    <span id="rank-number">1</span>
+                    <span>실검</span>
+                </span>
                 <ul> <!--unordered list, ol은 ordered list-->
                     <li>
                         <a href="">
@@ -52,11 +57,6 @@
                     <li><a href=""><span></span><span class="blind">네이버페이</span></a></li><!--list item-->
                     <li><a href=""><span></span><span class="blind">네이버쇼핑</span></a></li><!--list item-->
                 </ul>
-                <div id="search-ranking">
-                    <h2 class="blind">실시간 검색어</h2>
-                    <span id="rank-number">1</span>
-                    <span>실검</span>
-                </div>
                 <div class="nav-divider"></div>
             </div>
         </nav>
