--- a/Javascript 쇼핑몰 미니게임 과제/index.html
+++ b/Javascript 쇼핑몰 미니게임 과제/index.html
@@ -11,12 +11,14 @@
     <!-- Logo -->
     <img src="img/logo.png" alt="Logo" class="Logo">
     <!-- Buttons -->
-    <button class="btn"><img src="img/blue_t.png" alt="" class="imgBtn"></button>
-    <button class="btn"><img src="img/blue_p.png" alt="" class="imgBtn"></button>
-    <button class="btn"><img src="img/blue_s.png" alt="" class="imgBtn"></button>
-    <button class="btn colorBtn blue">Blue</button>
-    <button class="btn colorBtn yellow">Yellow</button>
-    <button class="btn colorBtn pink">Pink</button>
+    <section class="buttons">
+      <button class="btn"><img src="img/blue_t.png" alt="" class="imgBtn"></button>
+      <button class="btn"><img src="img/blue_p.png" alt="" class="imgBtn"></button>
+      <button class="btn"><img src="img/blue_s.png" alt="" class="imgBtn"></button>
+      <button class="btn colorBtn blue">Blue</button>
+      <button class="btn colorBtn yellow">Yellow</button>
+      <button class="btn colorBtn pink">Pink</button>
+    </section>
     <!-- Items -->
     <ul class="items">
       <li class="item">
