--- a/Javascript 쇼핑몰 미니게임 과제/index.html
+++ b/Javascript 쇼핑몰 미니게임 과제/index.html
@@ -15,16 +15,18 @@
       <button class="btn"><img src="img/blue_t.png" alt="" class="imgBtn"></button>
       <button class="btn"><img src="img/blue_p.png" alt="" class="imgBtn"></button>
       <button class="btn"><img src="img/blue_s.png" alt="" class="imgBtn"></button>
-      <button class="btn colorBtn blue">Blue</button>
-      <button class="btn colorBtn yellow">Yellow</button>
-      <button class="btn colorBtn pink">Pink</button>
+      <button class="btn colorBtn blue" data-key="color" data-value="blue">
+        Blue
+      </button>
+      <button class="btn colorBtn yellow" data-key="color" data-value="yellow">
+        Yellow
+      </button>
+      <button class="btn colorBtn pink" data-key="color" data-value="pink">
+        Pink
+      </button>
     </section>
     <!-- Items -->
     <ul class="items">
-      <li class="item">
-        <img src="img/blue_t.png" alt="" class="item__thumbnail">
-        <span class="item__description">male, large</span>
-      </li>
     </ul>
   </body>
 </html>
