--- a/Javascript 쇼핑몰 미니게임 과제/index.html
+++ b/Javascript 쇼핑몰 미니게임 과제/index.html
@@ -15,13 +15,13 @@
       <button class="btn"><img src="img/blue_t.png" alt="" class="imgBtn"></button>
       <button class="btn"><img src="img/blue_p.png" alt="" class="imgBtn"></button>
       <button class="btn"><img src="img/blue_s.png" alt="" class="imgBtn"></button>
-      <button class="btn colorBtn blue" data-key="color" data-value="blue">
+      <button class="btn colorBtn blue">
         Blue
       </button>
-      <button class="btn colorBtn yellow" data-key="color" data-value="yellow">
+      <button class="btn colorBtn yellow">
         Yellow
       </button>
-      <button class="btn colorBtn pink" data-key="color" data-value="pink">
+      <button class="btn colorBtn pink">
         Pink
       </button>
     </section>
